# libsvm

./: Kconfig  Makefile.am  bosp.mk  configure.ac
